Update deps to the released ones

--- a/2020-HaskellerZ/Color/Jupyter/Alternative.ipynb
+++ b/2020-HaskellerZ/Color/Jupyter/Alternative.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -493,13 +493,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<HSI-SRGB 'Linear:( 0.33748797, 0.96379584, 0.27686056)>"
+       "<HSI-SRGB 'NonLinear:( 0.35163470, 0.74999960, 0.40001696)>"
       ]
      },
      "metadata": {},
@@ -508,7 +508,7 @@
     {
      "data": {
       "text/plain": [
-       "<HSL-SRGB 'Linear:( 0.33828363, 0.97486160, 0.39873374)>"
+       "<HSL-SRGB 'NonLinear:( 0.35417180, 0.80002797, 0.50001020)>"
       ]
      },
      "metadata": {},
@@ -517,7 +517,7 @@
     {
      "data": {
       "text/plain": [
-       "<HSV-SRGB 'Linear:( 0.33828363, 0.98727083, 0.78744394)>"
+       "<HSV-SRGB 'NonLinear:( 0.35417180, 0.88888600, 0.90001600)>"
       ]
      },
      "metadata": {},
@@ -526,7 +526,7 @@
     {
      "data": {
       "text/plain": [
-       "<CMYK-SRGB 'Linear:( 0.98727083, 0.00000000, 0.95794713, 0.21255606)>"
+       "<CMYK-SRGB 'NonLinear:( 0.88888600, 0.00000000, 0.77774780, 0.09998399)>"
       ]
      },
      "metadata": {},
@@ -542,77 +542,11 @@
    ],
    "source": [
     "sRGB = ColorRGB 0.1 0.9 0.2 :: Color (SRGB 'NonLinear) Float\n",
-    "print (convertColor sRGB :: Color (HSI (SRGB 'Linear)) Float)\n",
-    "print (convertColor sRGB :: Color (HSL (SRGB 'Linear)) Float)\n",
-    "print (convertColor sRGB :: Color (HSV (SRGB 'Linear)) Float)\n",
-    "print (convertColor sRGB :: Color (CMYK (SRGB 'Linear)) Float)\n",
+    "print (convertColor sRGB :: Color (HSI (SRGB 'NonLinear)) Float)\n",
+    "print (convertColor sRGB :: Color (HSL (SRGB 'NonLinear)) Float)\n",
+    "print (convertColor sRGB :: Color (HSV (SRGB 'NonLinear)) Float)\n",
+    "print (convertColor sRGB :: Color (CMYK (SRGB 'NonLinear)) Float)\n",
     "displayColor sRGB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "-- Optionally look at real life example\n",
-    ":! xdg-open https://blender.stackexchange.com/questions/80034/fix-hsv-to-rgb-conversion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<RGB:( 51,255,133)>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<RGB:( 0.2000000000000000, 1.0000000000000000, 0.5200000000000002)>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<RGB:( 51,255,133)>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<SRGB 'Linear:( 0.03310476, 1.00000000, 0.23302203)>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import qualified Graphics.Color.Model as CM\n",
-    "\n",
-    "-- > everywhere I looked this converted to Hex 33FF85 - even in Blender\n",
-    "CM.ColorRGB 0x33 0xff 0x85 :: Color CM.RGB Word8\n",
-    "\n",
-    "-- > when I convert it to RGB\n",
-    "CM.hsv2rgb (CM.ColorHSV 0.4 0.8 1.0)\n",
-    "toWord8 <$> CM.hsv2rgb (CM.ColorHSV 0.4 0.8 1.0)\n",
-    "\n",
-    "-- > What blender gives\n",
-    "dcctf $ toBaseSpace (ColorHSV 0.4 0.8 1.0 :: Color (HSV (SRGB 'NonLinear)) Float)\n"
    ]
   },
   {
