Fix Dominic's last name

--- a/2021-HaskellerZ/random/random-ihaskell/new-random-interface.ipynb
+++ b/2021-HaskellerZ/random/random-ihaskell/new-random-interface.ipynb
@@ -61,7 +61,7 @@
     "* December 2019 - I wrote a blog post about how terrible `random`'s performance is:\n",
     "  [Random benchmarks](https://alexey.kuleshevi.ch/blog/2019/12/21/random-benchmarks/).\n",
     "\n",
-    "* February 2020 - Dominic Stenitz confirmed my benchmark results from the blogpost and \n",
+    "* February 2020 - Dominic Steinitz confirmed my benchmark results from the blogpost and \n",
     "  asked if I'd be willing to collaborate on getting those issues with `random` resolved.\n",
     "\n",
     "* February 2020 - June 2020: Dominic Stenitz, Leonhard Markert and myself worked really\n",
@@ -1201,7 +1201,7 @@
    "source": [
     "## Special thanks to\n",
     "\n",
-    "* Dominic Stenitz [@idontgetoutmuch](https://github.com/idontgetoutmuch)\n",
+    "* Dominic Steinitz [@idontgetoutmuch](https://github.com/idontgetoutmuch)\n",
     "* Leonhard Markert [@curiousleo](https://github.com/curiousleo)\n",
     "* Aleksey Khudyakov [@Shimuuar](https://github.com/Shimuuar)\n",
     "* Andrew Lelechenko [@bodigrim](https://github.com/bodigrim)\n",
