Remove stale file and talk is finished

--- a/2021-HaskellExchange/arrays-that-do-not-exist/ArraysThatDontExist.ipynb
+++ b/2021-HaskellExchange/arrays-that-do-not-exist/ArraysThatDontExist.ipynb
@@ -20,7 +20,7 @@
     "</div>\n",
     "\n",
     "* `massiv` - https://github.com/lehins/massiv\n",
-    "* Slides - https://github.com/lehins/talks/tree/master/2021-HaskellExchange"
+    "* Presentation - https://github.com/lehins/talks/tree/master/2021-HaskellExchange"
    ]
   },
   {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1069,8 +1069,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "midpointRule ::\n",
@@ -1088,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1177,14 +1181,14 @@
     }
    ],
    "source": [
-    "A.sum $ \n",
+    "A.sum $\n",
     "  PullArray Par (Sz (11 :. 11)) $ \\(i :. j) -> \n",
     "    integrate @Double gauss (fromIntegral j - 5) (fromIntegral i - 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1274,7 @@
     "import Data.Massiv.Array.IO\n",
     "\n",
     "frog <- readImageAuto \"frog.jpg\" :: IO (Matrix S (Pixel (SRGB 'Linear) Float))\n",
-    "showImage $ computeAs S $ delay $ leftToRightPull (hflip frog) frog"
+    "showImage $ computeAs S $ leftToRightPull (hflip frog) frog"
    ]
   },
   {
@@ -1290,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1375,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1453,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1475,8 +1479,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {},
@@ -1513,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1541,102 +1550,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>/* Styles used for the Hoogle display in the pager */\n",
-       ".hoogle-doc {\n",
-       "display: block;\n",
-       "padding-bottom: 1.3em;\n",
-       "padding-left: 0.4em;\n",
-       "}\n",
-       ".hoogle-code {\n",
-       "display: block;\n",
-       "font-family: monospace;\n",
-       "white-space: pre;\n",
-       "}\n",
-       ".hoogle-text {\n",
-       "display: block;\n",
-       "}\n",
-       ".hoogle-name {\n",
-       "color: green;\n",
-       "font-weight: bold;\n",
-       "}\n",
-       ".hoogle-head {\n",
-       "font-weight: bold;\n",
-       "}\n",
-       ".hoogle-sub {\n",
-       "display: block;\n",
-       "margin-left: 0.4em;\n",
-       "}\n",
-       ".hoogle-package {\n",
-       "font-weight: bold;\n",
-       "font-style: italic;\n",
-       "}\n",
-       ".hoogle-module {\n",
-       "font-weight: bold;\n",
-       "}\n",
-       ".hoogle-class {\n",
-       "font-weight: bold;\n",
-       "}\n",
-       ".get-type {\n",
-       "color: green;\n",
-       "font-weight: bold;\n",
-       "font-family: monospace;\n",
-       "display: block;\n",
-       "white-space: pre-wrap;\n",
-       "}\n",
-       ".show-type {\n",
-       "color: green;\n",
-       "font-weight: bold;\n",
-       "font-family: monospace;\n",
-       "margin-left: 1em;\n",
-       "}\n",
-       ".mono {\n",
-       "font-family: monospace;\n",
-       "display: block;\n",
-       "}\n",
-       ".err-msg {\n",
-       "color: red;\n",
-       "font-style: italic;\n",
-       "font-family: monospace;\n",
-       "white-space: pre;\n",
-       "display: block;\n",
-       "}\n",
-       "#unshowable {\n",
-       "color: red;\n",
-       "font-weight: bold;\n",
-       "}\n",
-       ".err-msg.in.collapse {\n",
-       "padding-top: 0.7em;\n",
-       "}\n",
-       ".highlight-code {\n",
-       "white-space: pre;\n",
-       "font-family: monospace;\n",
-       "}\n",
-       ".suggestion-warning { \n",
-       "font-weight: bold;\n",
-       "color: rgb(200, 130, 0);\n",
-       "}\n",
-       ".suggestion-error { \n",
-       "font-weight: bold;\n",
-       "color: red;\n",
-       "}\n",
-       ".suggestion-name {\n",
-       "font-weight: bold;\n",
-       "}\n",
-       "</style><span class='get-type'>mapStencil :: forall ix r e a. (Index ix, Manifest r e) => Border e -> Stencil ix e a -> Array r ix e -> Array DW ix a</span>"
-      ],
-      "text/plain": [
-       "mapStencil :: forall ix r e a. (Index ix, Manifest r e) => Border e -> Stencil ix e a -> Array r ix e -> Array DW ix a"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {},
      "metadata": {},
@@ -1692,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
