--- a/2021-HaskellExchange/arrays-that-do-not-exist/ArraysThatDontExist.ipynb
+++ b/2021-HaskellExchange/arrays-that-do-not-exist/ArraysThatDontExist.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "# Haskell eXchange - 2021\n",
     "\n",
-    "## Multi-dimensional Arrays That Do Not Exit\n",
+    "## Multi-dimensional Arrays That Do Not Exist\n",
     "\n",
     "### Alexey Kuleshevich\n",
     "\n",
