Continue improving slides

--- a/2025-Boulder-Haskell/random/random-ihaskell/new-random-interface.ipynb
+++ b/2025-Boulder-Haskell/random/random-ihaskell/new-random-interface.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
     "newtype AreaCode = AreaCode { unAreaCode :: Int }\n",
     "  deriving (Eq, Show, Num)\n",
     "\n",
-    "-- | The North American Numbering Plan (NANP) phone, eg. +1-555-123-4567\n",
+    "-- | The North American Numbering Plan (NANP) phone eg. +1-555-123-4567\n",
     "data Phone = Phone { phoneAreaCode :: AreaCode\n",
     "                   , phoneLocalNumber :: Int\n",
     "                   }\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
     "\n",
     "* Improve quality of the default pseudo-random number generator (PRNG)\n",
     "\n",
-    "* Fix qerrible performance\n",
+    "* Fix abysmally slow performance\n",
     "\n",
     "* Design replacement for an inaccurate `Random` type class\n",
     "\n",
@@ -289,7 +289,7 @@
     "\n",
     "* Bad performance characteristics\n",
     "\n",
-    "* Splitting produced sequences that weren't independent\n"
+    "* Splitting produced sequences that were not independent\n"
    ]
   },
   {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -520,9 +520,9 @@
     "## Problem\n",
     "### Stateful monadic generators lack interface\n",
     "\n",
-    "* State transformer monad - when pure generator is the actual state in `StateT`\n",
+    "* State transformer monad - when pure generator is the actual state in `StateT` from `transformers` or `RandT` from `MonadRandom`\n",
     "\n",
-    "* Mutable variables - when pure generator is stored in an `STRef`, `IORef` or a `TVar`\n",
+    "* Mutable variables - when pure generator is stored in a `STRef`, `IORef` or `TVar`\n",
     "\n",
     "* Generators that depend on a large mutable state that has to be stored in something like a mutable vector. Here are packages that provide such generators in Haskell:\n",
     "  \n",
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,21 +636,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "<interactive>:1:11: error: [GHC-88464] Variable not in scope: uniformPhoneStateT :: [a0] -> State StdGen a"
-     ]
+     "data": {
+      "text/plain": [
+       "(+1-720-623-8461,StdGen {unStdGen = SMGen 2239102407005124922 13478418381427711195})"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(+1-720-623-8461,StdGen {unStdGen = SMGen 2239102407005124922 13478418381427711195})"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "gen = mkStdGen 1234\n",
-    "runState (uniformPhoneStateT [303, 720]) gen\n",
+    "runState (uniformPhoneMonadState [303, 720]) gen\n",
     "runState (uniformPhoneM [303, 720] StateGenM) gen"
    ]
   },
@@ -661,12 +671,18 @@
     "```haskell\n",
     "runStateGen :: \n",
     "  RandomGen g => g -> (StateGenM g -> State g a) -> (a, g)\n",
+    "```\n",
+    "\n",
+    "Note that the `StateGenM` constructor, is merely a proxy type:\n",
+    "\n",
+    "```haskell\n",
+    "data StateGenM g = StategGenM\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -698,37 +714,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "{-# LANGUAGE FlexibleContexts #-}\n",
     "import Control.Monad.Reader\n",
     "\n",
-    "uniformPhoneReaderStateM ::\n",
+    "uniformPhoneReaderM ::\n",
     "  (MonadReader [AreaCode] m, StatefulGen g m) => g -> m Phone\n",
-    "uniformPhoneReaderStateM gen = do\n",
+    "uniformPhoneReaderM gen = do\n",
     "  areaCodes <- ask\n",
     "  uniformPhoneM areaCodes gen\n",
     "\n",
     "{- HLINT ignore \"Eta reduce\" -}\n",
     "uniformPhoneMTL :: RandomGen g => [AreaCode] -> g -> (Phone, g)\n",
     "uniformPhoneMTL areaCodes gen = \n",
-    "  runReader (runStateT (uniformPhoneReaderStateM StateGenM) gen) areaCodes\n",
+    "  runReader (runStateT (uniformPhoneReaderM StateGenM) gen) areaCodes\n",
     "\n",
     "uniformPhoneMTL' :: RandomGen g => [AreaCode] -> g -> (Phone, g)\n",
     "uniformPhoneMTL' areaCodes gen = \n",
-    "  runReader (runStateGenT gen uniformPhoneReaderStateM) areaCodes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that the `StateGenM` constructor, is merely a proxy type:\n",
-    "```haskell\n",
-    "data StateGenM g = StategGenM\n",
-    "```"
+    "  runReader (runStateGenT gen uniformPhoneReaderM) areaCodes"
    ]
   },
   {
@@ -761,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,13 +818,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[+1-303-962-5381,+1-720-236-8988,+1-720-007-1740]"
+       "[+1-720-236-8988,+1-720-255-4052,+1-303-962-5381]"
       ]
      },
      "metadata": {},
@@ -957,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1008,7 +1014,7 @@
     {
      "data": {
       "text/plain": [
-       "+1-800-679-9149"
+       "+1-888-469-1855"
       ]
      },
      "metadata": {},
@@ -1062,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1115,9 +1121,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "<interactive>:2:27: error: [GHC-76037]\n    Not in scope: ‘B.pack’\n    NB: no module named ‘B’ is imported."
+     ]
+    }
+   ],
    "source": [
     "randomByteStringNaive :: RandomGen g => Int -> g -> BS.ByteString\n",
     "randomByteStringNaive n = B.pack . take n . randoms"
@@ -1150,13 +1165,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[239,112,67,178,20,83,180,85,235,175,65,105,198,107,250]"
+       "[177,178,234,246,40,150,240,249,142,251,172,226,109,131,30]"
       ]
      },
      "metadata": {},
@@ -1171,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1190,10 +1205,47 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Not all PRNGs are splittable\n",
+    "\n",
+    "Example implementation of `split` in `mersenne-random-pure64`:\n",
+    "```haskell\n",
+    "instance RandomGen PureMT where\n",
+    "  split = error \"System.Random.Mersenne.Pure: unable to split the mersenne twister\"\n",
+    "```\n",
+    "\n",
+    "Another example from `pcgen:\n",
+    "```haskell\n",
+    "instance RandomGen PCGen where\n",
+    "    -- The only real spec here is that the two result generators be dissimilar\n",
+    "    -- from each other and also from the input generator. So we just do some\n",
+    "    -- nonsense shuffling around to achieve that.\n",
+    "    split gen@(PCGen state inc) = ... -- no statistical foundation for this!\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `SplitGen`\n",
-    "TODO"
+    "### Solution is `SplitGen`\n",
+    "\n",
+    "Creating a separate type class solves this issue for us:\n",
+    "\n",
+    "```haskell\n",
+    "class RandomGen g where\n",
+    "  ...\n",
+    "  -- Deprecated:\n",
+    "  split :: g -> (g, g)\n",
+    "\n",
+    "class RandomGen g => SplitGen g where\n",
+    "  splitGen :: g -> (g, g)\n",
+    "```"
    ]
   },
   {
@@ -1224,7 +1276,7 @@
     }
    },
    "source": [
-    "## Stats\n",
+    "## Stats for `random-1.2`\n",
     "\n",
     "After 5 months of work:\n",
     "* [266 commits](https://github.com/idontgetoutmuch/random/compare/v1.1...v1.2-proposal)\n",
@@ -1250,26 +1302,15 @@
     "* Interface has been expanded dramatically\n",
     "* Amount of documentation was increased quite a bit\n",
     "* Modern test and benchmark suites have been added\n",
-    "* Very little breakage, majority of the functionality was kept backwards compatible."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Future plans\n",
+    "* Very little breakage, majority of the functionality was kept backwards compatible.\n",
     "\n",
-    "* Generic deriving for `Uniform` and `UniformRange` classes is almost done, some of it has\n",
-    "  already been released\n",
+    "### Since `random-1.2` release:\n",
+    "\n",
+    "* Generic deriving for `Uniform` and `UniformRange` classes\n",
     "* Further improvements to floating point number generation\n",
-    "* `Uniform` and `UniformRange` instances for more types from base.\n",
-    "* Possibly another class for generating complex data structures, eg. lists, arrays, trees, etc.\n",
     "* Type safety for distinguishing splittable vs non-splittable generators\n",
-    "* Mutable generator that works in `STM`."
+    "* Mutable generator that works in `STM`.\n",
+    "* Support for serialization of generators with `SeedGen` type class"
    ]
   },
   {
@@ -1280,16 +1321,14 @@
     }
    },
    "source": [
-    "## Special thanks to\n",
+    "## Potential future plans\n",
     "\n",
-    "* Dominic Steinitz [@idontgetoutmuch](https://github.com/idontgetoutmuch)\n",
-    "* Leonhard Markert [@curiousleo](https://github.com/curiousleo)\n",
-    "* Aleksey Khudyakov [@Shimuuar](https://github.com/Shimuuar)\n",
-    "* Andrew Lelechenko [@bodigrim](https://github.com/bodigrim)\n",
-    "* Daniel Cartwright [@chessai](https://github.com/chessai)\n",
-    "* Oleg Grenrus [@phadej](https://github.com/phadej)\n",
-    "* Richard Eisenberg [@goldfirere](https://github.com/goldfirere)\n",
-    "* Mathieu Boespflug [@mboes](https://github.com/mboes)"
+    "* Interface for generating complex data structures, eg. lists, arrays, trees, etc.\n",
+    "* More operations (eg. picking random element, randomly selected sub-lists or sub-maps, etc.)\n",
+    "* Interface for lazy generators (eg. QuickCheck style that uses splittability)\n",
+    "* Support of splittability in `Random`, `Uniform` and `UniformRange` instances\n",
+    "* Reader like interface that avoids passing around mutable generator.\n",
+    "\n"
    ]
   },
   {
@@ -1303,6 +1342,9 @@
     "-------\n",
     "\n",
     "# Thank You!\n",
+    "\n",
+    "\n",
+    "### Questions?\n",
     "\n",
     "-------"
    ]
