--- a/2025-Boulder-Haskell/random/random-ihaskell/new-random-interface.ipynb
+++ b/2025-Boulder-Haskell/random/random-ihaskell/new-random-interface.ipynb
@@ -12,7 +12,7 @@
     "                           \n",
     "                             15th of July 2025\n",
     "                        \n",
-    "                        Overhaul of `random` package\n",
+    "                       Overhaul of the `random` package\n",
     "                             \n",
     "                             \n",
     "                             \n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
     "newtype AreaCode = AreaCode { unAreaCode :: Int }\n",
     "  deriving (Eq, Show, Num)\n",
     "\n",
-    "-- | The North American Numbering Plan (NANP) phone eg. +1-555-123-4567\n",
+    "-- | The North American Numbering Plan phone, eg. +1-555-123-4567\n",
     "data Phone = Phone { phoneAreaCode :: AreaCode\n",
     "                   , phoneLocalNumber :: Int\n",
     "                   }\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,13 +818,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[+1-720-236-8988,+1-720-255-4052,+1-303-962-5381]"
+       "[+1-303-255-4052,+1-720-302-4107,+1-303-962-5381]"
       ]
      },
      "metadata": {},
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +979,8 @@
    "source": [
     "import Control.Concurrent.STM\n",
     "\n",
-    "atomically $ withMutableGen (TGen (mkStdGen 1)) (uniformPhoneM [505, 575])"
+    "atomically $ \n",
+    "  withMutableGen (TGen (mkStdGen 1)) (uniformPhoneM [505, 575])"
    ]
   },
   {
@@ -995,7 +996,7 @@
     "`mwc-random-0.15.0.1` is capable of using this new interface because it provides these two instances:\n",
     "\n",
     "```haskell\n",
-    "instance (s ~ PrimState m, PrimMonad m) => StatefulGen (MWC.Gen s) m where\n",
+    "instance (s ~ PrimState m, PrimMonad m) => StatefulGen (MWC.Gen s) m\n",
     "\n",
     "instance PrimMonad m => FrozenGen MWC.Seed m where\n",
     "  type MutableGen MWC.Seed m = MWC.Gen (PrimState m)\n",
@@ -1004,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1014,7 +1015,7 @@
     {
      "data": {
       "text/plain": [
-       "+1-888-469-1855"
+       "+1-888-829-6420"
       ]
      },
      "metadata": {},
@@ -1043,7 +1044,9 @@
     "```haskell\n",
     "newtype Seed g = Seed ByteArray\n",
     "\n",
-    "class (KnownNat (SeedSize g), 1 <= SeedSize g, Typeable g) => SeedGen g where\n",
+    "class ( KnownNat (SeedSize g)\n",
+    "      , 1 <= SeedSize g, Typeable g\n",
+    "      ) => SeedGen g where\n",
     "  type SeedSize g :: Nat\n",
     "  {-# MINIMAL (fromSeed, toSeed) | (fromSeed64, toSeed64) #-}\n",
     "  fromSeed :: Seed g -> g\n",
@@ -1068,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1121,21 +1124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "<interactive>:2:27: error: [GHC-76037]\n    Not in scope: ‘B.pack’\n    NB: no module named ‘B’ is imported."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "randomByteStringNaive :: RandomGen g => Int -> g -> BS.ByteString\n",
-    "randomByteStringNaive n = B.pack . take n . randoms"
+    "randomByteStringNaive n = BS.pack . take n . randoms"
    ]
   },
   {
@@ -1165,13 +1159,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[177,178,234,246,40,150,240,249,142,251,172,226,109,131,30]"
+       "[97,145,49,37,25,122,71,20,239,164,80,164,226,52,81]"
       ]
      },
      "metadata": {},
@@ -1186,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1219,19 +1213,24 @@
     "  split = error \"System.Random.Mersenne.Pure: unable to split the mersenne twister\"\n",
     "```\n",
     "\n",
-    "Another example from `pcgen:\n",
+    "Another example from `pcgen`:\n",
     "```haskell\n",
     "instance RandomGen PCGen where\n",
-    "    -- The only real spec here is that the two result generators be dissimilar\n",
-    "    -- from each other and also from the input generator. So we just do some\n",
-    "    -- nonsense shuffling around to achieve that.\n",
-    "    split gen@(PCGen state inc) = ... -- no statistical foundation for this!\n",
+    "    -- The only real spec here is that the two result generators be\n",
+    "    -- dissimilar from each other and also from the input generator.\n",
+    "    -- So we just do some nonsense shuffling around to achieve that.\n",
+    "    split gen@(PCGen state inc) = ... \n",
+    "    -- no statistical foundation for this!\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### Solution is `SplitGen`\n",
     "\n",
@@ -1261,8 +1260,10 @@
     "Thanks to `FrozenGen` it was possible to also create monadic versions of functions from `Random` class:\n",
     "\n",
     "```haskell\n",
-    "randomM :: forall a g m. (Random a, RandomGen g, FrozenGen g m) => MutableGen g m -> m a\n",
-    "randomRM :: forall a g m. (Random a, RandomGen g, FrozenGen g m) => (a, a) -> MutableGen g m -> m a\n",
+    "randomM :: forall a g m. (Random a, RandomGen g, FrozenGen g m) =>\n",
+    "  MutableGen g m -> m a\n",
+    "randomRM :: forall a g m. (Random a, RandomGen g, FrozenGen g m) =>\n",
+    "  (a, a) -> MutableGen g m -> m a\n",
     "```\n",
     "\n",
     "Note - in `random-1.2.x` `RandomGenM` class was used to define these functions, which has now been deprecated"
