Add html versions of slides

--- a/2025-Boulder-Haskell/random/random-ihaskell/new-random-interface.ipynb
+++ b/2025-Boulder-Haskell/random/random-ihaskell/new-random-interface.ipynb
@@ -676,7 +676,7 @@
     "Note that the `StateGenM` constructor, is merely a proxy type:\n",
     "\n",
     "```haskell\n",
-    "data StateGenM g = StategGenM\n",
+    "data StateGenM g = StateGenM\n",
     "```"
    ]
   },
